test/expressions/diten/uintBinaryOverflow.chpl
var b = 0b10000000000000000000000000000000000000000000000000000000000000000;
writeln(b);
